--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
-    "gulp-uglify": "^1.5.1"
+    "gulp-csso": "^1.0.1",
+    "gulp-less": "^3.0.5",
+    "gulp-minify-css": "^1.2.1",
+    "gulp-uglify": "^1.5.1",
+    "less": "^2.5.3"
   }
 }
